# ConditionsLib

./: .gitignore  CMakeLists.txt  Config.cmake.in  Readme.MD
FunctionData/: F3b.txt  F4b.txt  F5b.txt  to_latex.awk
examples/: CMakeLists.txt  dimension3experiments.cc  dimension4experiments.cc  dimension4sboxes.cc  dimension4timing.cc  dimension5experiments.cc  dimension5timing.cc  dimension6experiments.cc  dimension6timing.cc  dimension7timing.cc  g_delta_Delta.cc  trees_des.cc  trees_gift_f_delta.cc  trees_noekeon.cc  trees_noekeon_fixed_components.cc  trees_present.cc  trees_rectangle.cc  trees_rectangle_f_delta.cc  trees_rectangle_fixed_components.cc  trees_rectangle_multiple_outputs.cc  trees_serpent.cc
include/ConditionsLib/: ComponentChoice.hpp  ComponentFunction.hpp  FourierTable.hpp  SboxTools.hpp  Uint64Subspace.hpp  VectorialBooleanFunction.hpp  basic_linear_algebra.hpp
include/ConditionsLib/enumeration_algorithm/: BruteForce.hpp  BruteForceOptimizations.hpp  ExhaustiveBF.hpp  MinLeaves.hpp
src/: CMakeLists.txt  FourierTable.cc  SboxTools.cc  VectorialBooleanFunction.cc  basic_linear_algebra.cc
src/enumeration_algorithm/: BruteForce.cc  BruteForceOptimizations.cc  ExhaustiveBF.cc  MinLeaves.cc
